--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
-<div id="home-wrapper" class="container h-100">
+<!-- <div id="home-wrapper" class="container h-100">
     <div class="row">
         <div class="col-12">
             <div class="title-wrapper">
-                <span>Angular Practice</span>        
+                <span>{{data}}</span>        
             </div>
             <div class="buttons-wrapper">
                 <button type="button" class="btn btn-dark" id="create-game-btn">Create Game</button>
@@ -12,4 +12,16 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
+<div class="container">
+    <h1>Live football scores</h1>
+    <div class="score-card-list">
+      <div *ngFor="let fixture of gameweek.fixtures">
+        <div class="score-card">
+            <span class="home">{{ fixture.homeTeamName }}</span>
+            <span class="score">{{ fixture.result.goalsHomeTeam }} : {{ fixture.result.goalsAwayTeam }}</span>
+            <span class="away">{{ fixture.awayTeamName }}</span>
+        </div>
+      </div>
+    </div>
+  </div>
